@@ -4,6 +4,10 @@ Changelog
 2.0.1 - unreleased
 ------------------
 
+- Use constant time comparison to verify the authenticator. This is part of the
+  fix for https://plone.org/products/plone/security/advisories/20121106/23
+  [davisagli]
+
 - Add MANIFEST.in.
   [WouterVH]
 
